# telegram-pdf-bot

./: bot.py  build.sh  pyproject.toml  requirements.txt.txt
