[tool.poetry]
name = "telegram-pdf-bot"
version = "0.1.0"
description = ""
authors = ["Твое имя <email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.0"
pdfkit = "*"
PyPDF2 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
