
[tool.poetry]
name = "telegram-pdf-bot"
version = "0.1.0"
description = "Telegram bot that converts HTML to PDF and zips them"
authors = ["Your Name <you@example.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.8"
pdfkit = "^1.0.0"
PyPDF2 = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.package-mode]
package-mode = false
